--- a/asset/css/common.scss
+++ b/asset/css/common.scss
@@ -516,6 +516,9 @@ input[type=text]::-ms-clear {
       float: left;
       &.title{
         width: 68px;
+        &.black{
+          color: $colorLevel2;
+        }
       }
       &.text{
         color: $colorPoint1;
@@ -535,4 +538,58 @@ input[type=text]::-ms-clear {
       }
     }
   }
+  &.big{
+    ul{
+      margin-bottom: 20px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+      li{
+        &.title{
+          font-size: $_16px;
+          width: 100px;
+        }
+        &.text{
+          width: 150px;
+          text-align: right;
+          strong{
+            font-weight: 700;
+          }
+        }
+        letter-spacing: -0.05em;
+        font-size: $_24px;
+        line-height: $_24px;
+      }
+    }
+  }
+
+  &.right{
+    ul{
+      margin-bottom: 12px;
+      &:last-child{
+        margin-bottom: 0;
+      }
+      li{
+        &.title{
+          font-size: $_16px;
+          width: 100px;
+          color: $colorLevel5;
+        }
+        &.text{
+          width: 150px;
+          text-align: right;
+          color: $colorLevel2;
+          strong{
+            font-weight: 600;
+          }
+        }
+        letter-spacing: -0.05em;
+        line-height: $_16px;
+      }
+    }
+  }
+}
+/*color*/
+.skyblue{
+  color: #01a7c4 !important;
 }
