--- a/asset/css/layout.scss
+++ b/asset/css/layout.scss
@@ -7,7 +7,7 @@
 
 //메인 layout
 .wrap.main {
-  min-height: 924px;
+  min-height: 940px;
   margin: 0 auto;
   min-width: 1280px;
 
@@ -15,7 +15,7 @@
     content: "";
     display: block;
     width: 1920px;
-    height: 924px;
+    height: 940px;
     position: absolute;
     left: 50%;
     top: 0;
@@ -36,7 +36,7 @@
       float: left;
       position: relative;
       width: 418px;
-      height: 924px;
+      height: 940px;
       padding: 30px 60px 0 50px;
 
       .nameArea {
@@ -167,14 +167,14 @@
 }
 //서브 layout
 .wrap.sub {
-  min-height: 924px;
+  min-height: 940px;
   margin: 0 auto;
   min-width: 1280px;
   &:after {
     content: "";
     display: block;
     width: 1920px;
-    height: 924px;
+    height: 940px;
     position: absolute;
     left: 50%;
     top: 0;
@@ -190,7 +190,7 @@
     width: 1280px;
     position: relative;
     z-index: 1;
-    .btnClose{
+    > .btnClose{
       position: absolute;
       right: 50px;
       top: 0;
@@ -200,7 +200,7 @@
       float: left;
       position: relative;
       width: 418px;
-      height: 924px;
+      height: 940px;
       padding-left:50px;
       .infoArea{
         float: left;
@@ -326,6 +326,8 @@
                 margin-bottom: 9px;
                 .item{
                   .name{
+                    display: block;
+                    width: 100%;
                     line-height: 38px;
                     padding-left: 10px;
                     color: #bbccf5;
@@ -415,7 +417,7 @@
       .menuArea{
         float: left;
         width: 174px;
-        height: 924px;
+        height: 940px;
         background: #f0f3f8;
         position: relative;
         border-right: 1px solid $lineColor2;
@@ -557,7 +559,7 @@
       padding: 0px 0 0px 30px;
 
       .contentScroll {
-        height: 942px;
+        height: 940px;
       }
     }
   }
@@ -567,6 +569,8 @@
   .topArea{
     @include clearline;
     border-bottom: 1px solid $lineColor1;
+    position: relative;
+    z-index:1;
     .imgArea{
       float: left;
       width: 295px;
@@ -611,6 +615,10 @@
         }
       }
     }
+    .layerPopBox{
+      left: 260px;
+      top: 265px;
+    }
   }
   .moreContent{
     @include clearline;
@@ -626,6 +634,41 @@
         position: absolute;
         left: 0;
         top: 0;
+        > .title{
+          line-height: $_36px;
+          padding-top: 34px;
+          font-size: $_30px;
+          font-weight: 300;
+          color: $colorLevel2;
+          text-align: center;
+        }
+        > .text{
+          color: $colorLevel2;
+          font-size: $_20px;
+          line-height: 1;
+          margin-top: 17px;
+          text-align: center;
+          padding-bottom: 42px;
+          position: relative;
+          margin-bottom: 37px;
+          &:after {
+            content: "";
+            display: block;
+            position: absolute;
+            left: 0;
+            right: 0;
+            bottom: 0;
+            width: 36px;
+            height: 3px;
+            border-radius: 3px;
+            background: #01a7c4;
+            margin:0 auto;
+          }
+        }
+        .infoGrid{
+          margin:0 auto;
+          width: 250px;
+        }
       }
       &.box2{
         width: 386px;
@@ -633,6 +676,28 @@
         position: absolute;
         left: 0;
         bottom: 0;
+        .graphArea{
+          position: relative;
+          #chartdiv1{
+            height: 200px;
+          }
+          .counterNumber{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            color: #42b4cc;
+            transform:translate(-50%, -50%);
+            font-size: $_30px;
+            letter-spacing: -1px;
+            strong{
+              font-weight: 700;
+            }
+          }
+        }
+        .infoGrid{
+          margin:-12px auto 0 auto;
+          width: 250px;
+        }
       }
       &.box3{
         width: 385px;
@@ -640,6 +705,90 @@
         position: absolute;
         right: 0;
         top: 0;
+        > .title{
+          line-height: $_36px;
+          padding-top: 34px;
+          font-size: $_30px;
+          font-weight: 300;
+          color: $colorLevel2;
+          text-align: center;
+        }
+        > .text {
+          color: $colorLevel2;
+          font-size: $_20px;
+          line-height: 1;
+          margin-top: 12px;
+          text-align: center;
+          position: relative;
+        }
+        .graphArea{
+          position: relative;
+          padding-top: 10px;
+          #chartdiv2{
+            height: 220px;
+          }
+          .counterNumber{
+            position: absolute;
+            left: 50%;
+            top: 50%;
+            color: #42b4cc;
+            transform:translate(-50%, -50%);
+            font-size: $_30px;
+            letter-spacing: -1px;
+            strong{
+              font-weight: 700;
+            }
+          }
+        }
+        .infoBox{
+          width: 305px;
+          margin: 25px auto 0 auto;
+          border:1px solid $lineColor2;
+          border-radius:13px;
+          line-height: 1;
+          font-size: 0;
+          padding:18px 0;
+          display:table;
+          text-align: center;
+          li{
+            display: inline-block;
+            padding:0 15px;
+            text-align: center;
+            line-height: 1;
+            .tit{
+              display: block;
+              font-size: $_16px;
+            }
+            .number{
+              margin-top: 8px;
+              display: block;
+              font-size: $_24px;
+              font-weight: 700;
+            }
+            &.all{
+              color: $colorLevel2;
+            }
+            &.no{
+              color: #7c838f;
+            }
+            &.lack{
+              color: $colorButtonRed;
+            }
+            &.good{
+              color: #01a7c4;
+            }
+          }
+        }
+        .result{
+          margin-top: 28px;
+          font-size: $_20px;
+          line-height: $_30px;
+          color: $colorLevel2;
+          text-align: center;
+          span{
+            color: $colorButtonRed;
+          }
+        }
       }
     }
   }
@@ -651,4 +800,51 @@
   text-align: center;
   margin-bottom: 15px;
   letter-spacing: -2px;
+}
+
+/*정보성 layerPopBox*/
+.layerPopBox{
+  display: none;
+  transform-origin: 50% 0;
+  opacity: 0;
+  transform: scale(.75);
+  transition: transform .2s cubic-bezier(0.5, 0, 0, 1.25), opacity .15s ease-out;
+  position: absolute;
+  left: 0;
+  top: 0;
+  padding:28px 30px;
+  border-radius:10px;
+  box-shadow:0 0 10px 3px rgba(35,44,66,0.2);
+  background: #ffffff;
+  &.open{
+    opacity: 1;
+    transform: scale(1);
+  }
+  .layerPopContent{
+    font-size: $_14px;
+    line-height: $_20px;
+    letter-spacing:-0.03em;
+    .iconTitle{
+      background: url("/asset/images/main/icon_alert.png") no-repeat left top;
+      font-size: $_16px;
+      line-height: 21px;
+      padding-left: 27px;
+      color: $colorLevel2;
+      margin-bottom: 10px;
+    }
+    .text{
+      font-size: $_14px;
+      line-height: $_20px;
+      color: $colorLevel4;
+    }
+  }
+
+  .btnClose{
+    position: absolute;
+    right: 20px;
+    top: 20px;
+    background: url("/asset/images/common/btn_popup_close.png") no-repeat;
+    width: 17px;
+    height: 17px;
+  }
 }
