팝업 가계약 조회 리스트

--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -519,7 +519,7 @@
     text-align: center;
   }
 }
-.popSmall{
+.popAlert{
   width: 380px;
   height: 255px;
   .centerBox{
@@ -787,6 +787,9 @@
     padding-top:20px;
     border-top:1px solid $lineColor1
   }
+}
+.popConditionalContract{
+  .searchCondition
 }
 
 /* tabWrap */
