--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -389,7 +389,7 @@
   .payment{
     float: right;
     width:253px;
-    height: 100%;
+    height: 130px;
     padding:0px 30px 0;
     background:#fff;    
     border-radius: 0 8px 8px 0;
@@ -835,11 +835,12 @@
     .info{
       width:460px;
       border-right:1px solid $lineColor3;
-      padding:25px 30px 0; 
+      padding:0px 30px 0; 
     }
     .payment{
       width:240px;
       padding:0px 30px 0;
+      height: 110px;
     }
   }
   .contractScroll{
