--- a/asset/css/layout.scss
+++ b/asset/css/layout.scss
@@ -48,7 +48,7 @@
         letter-spacing: -4px;
 
         .name {
-          font-weight: 600;
+          font-weight: 500;
         }
       }
 
@@ -60,7 +60,7 @@
         letter-spacing: -1px;
 
         .many {
-          font-weight: 600;
+          font-weight: 500;
           font-size: $_36px;
           color: $colorButtonRed;
         }
@@ -307,7 +307,7 @@
             letter-spacing:-1px;
             strong{
               font-size: $_32px;
-              font-weight: 600;
+              font-weight: 500;
               color: $colorButtonRed;
             }
           }
@@ -331,7 +331,7 @@
                     line-height: 38px;
                     padding-left: 10px;
                     color: #bbccf5;
-                    font-weight: 600;
+                    font-weight: 500;
                     position: relative;
                     &:after{
                       content:"";
@@ -594,7 +594,7 @@
         font-weight: 300;
         letter-spacing:-1px;
         strong{
-          font-weight: 600;
+          font-weight: 500;
         }
       }
       .text{
@@ -724,20 +724,20 @@
         .graphArea{
           position: relative;
           padding-top: 10px;
+          &:after{
+            content:"";
+            display: block;
+            position: absolute;
+            left: 0;
+            top: 0;
+            width: 100%;
+            height: 100%;
+            z-index:1;
+            background: #fff;
+            opacity:0;
+          }
           #chartdiv2{
             height: 220px;
-          }
-          .counterNumber{
-            position: absolute;
-            left: 50%;
-            top: 50%;
-            color: #42b4cc;
-            transform:translate(-50%, -50%);
-            font-size: $_30px;
-            letter-spacing: -1px;
-            strong{
-              font-weight: 700;
-            }
           }
         }
         .infoBox{
