--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -267,7 +267,7 @@
     }
   }
   &.checkList{
-    a.insurance{
+    .insurance{
       &:before{
         display: none;
       }
@@ -351,13 +351,17 @@
     margin-bottom: 0;
   }
   .info{
-    display: table-cell;
-    vertical-align: middle;
+    float: left;
+    display: table;
     width:527px;
-    height: 100%;
+    height: 130px;
     padding:0px 30px 0;
     background:#fff;    
     border-radius: 8px 0 0 8px;
+    .inner{
+      display: table-cell;
+      vertical-align: middle;
+    }    
     .logo{
       display: block;
       height:34px;
@@ -834,6 +838,7 @@
     }
     .info{
       width:460px;
+      height: 110px;
       border-right:1px solid $lineColor3;
       padding:0px 30px 0; 
     }
