--- a/asset/css/reset.scss
+++ b/asset/css/reset.scss
@@ -180,3 +180,13 @@ a,button {
   text-align: left;
 }
 
+button,
+button:focus,
+button:active{
+  padding: 0;
+}
+button span,
+button:focus span,
+button:active span{
+  position: relative;
+}
