--- a/asset/css/contents.scss
+++ b/asset/css/contents.scss
@@ -333,7 +333,6 @@
   height: 130px;   
   position: relative;
   margin-bottom:10px;
-  display: table;
   &:hover:before{
     display: block;
     content: "";
@@ -344,6 +343,7 @@
     position: absolute;
     top:0;
     left:0;
+    z-index: 10;
     box-shadow: 7px 7px 9px 0px rgba(0,0,0,0.12);
   }
   &:after{
